# invoice-qc-omkar

./: .gitignore  Dockerfile.backend  README.md  docker-compose.yaml  dockerfile  pyproject.toml  report.json  requirements.txt
api/: main.py
frontend/: Dockerfile.frontend  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
invoice_qc/: cli.py  extractor.py  rules.py  schema.py  validator.py
